footer copy left - ROWODO

--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
             <div id="copy-left">
                 <div class="container pb-2 pt-2">
                     <div class="row">
-                        <span class="col-9">Faculty of Computer Studies</span>
-                        <span class="col-3 text-right"> <b>IUA</b> &copy; 2023 </span>
+                        <span class="col-9">Rondo Women Development Organization</span>
+                        <span class="col-3 text-right"> <b>ROWODO</b> &copy; 2023 </span>
                     </div>
                 </div>    
             </div>
