--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
         <!-- Custom styles -->
-        <link rel="stylesheet" href="res/css/style.css">
+        <link rel="stylesheet" href="./res/css/style.css">
         <link rel="stylesheet" href="res/css/carousel.css">
 
         <!-- google font -->
