--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
         <!-- Custom styles -->
-        <link rel="stylesheet" href="./res/css/style.css">
+        <link rel="stylesheet" href="./res/css/rowodo.css">
         <link rel="stylesheet" href="res/css/carousel.css">
 
         <!-- google font -->
@@ -40,7 +40,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6">
-                            <a href="http://www.iua.edu.sd"><i class="bi bi-house-fill section-title"></i> Home </a>
+                            <a href="http://www.rowodo.or.tz"><i class="bi bi-house-fill section-title"></i> Home </a>
                         </div>
                         <div class="col-md-6 section-title text-right">
                             <a href="tel:+249127133377" class="phone-numer">+249 127 133 377</a> &nbsp; &nbsp; 
