--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
                 <span class="web-for" id="small-univ-title">
                     International University of Africa
                 </span>
-                <h4 class="section-title">Faculty of Computer Studies</h4>
+                <h4 class="section-title">Rondo Women's Development Organization</h4>
                 <p class="section-subtitle"></p>
 
 
                 <!-- page contents -->
                 <p>
-                    <span>Welcome to Computer Studies Faculty.</span>
+                    <span>Welcome to Rondo Women's Development Organization.</span>
                     <br>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate consequuntur, quidem, vero officia nostrum omnis qui hic sint id velit a sequi, similique exercitationem dolores harum debitis praesentium deserunt ipsum. 
                 </p>
