--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
             <div class="container pt-2">
                 <span class="web-for" id="small-univ-title">
-                    International University of Africa
+                    ROWODO
                 </span>
                 <h4 class="section-title">Rondo Women's Development Organization</h4>
                 <p class="section-subtitle"></p>
@@ -119,9 +119,8 @@
                     <div class="col-md-4">
                         <h5>Address</h5>
                         <p>
-                            International University of Africa <br>
-                            Southern Campus - Salama Road <br>
-                            + 249 123 456 789
+                            Rondo Women's Development Organization<br>
+                            Ntauna Village - Lindi Rural District<br>
 
                         </p>
 
