--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6">
-                            <a href="http://www.rowodo.or.tz"><i class="bi bi-house-fill section-title"></i> Home </a>
+                            <a href="http://www.rowodo.or.tz">
+                                <img src="./res/images/logo/rowodo-logo.png" alt="rowodo-logo" class="top-logo">
+                            </a>
                         </div>
                         <div class="col-md-6 section-title text-right">
                             <a href="tel:+255767351547" class="phone-numer">+255 767 351 547</a> &nbsp; &nbsp; 
