--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
                     <div class="row">
                         <div class="col-md-6">
                             <a href="http://www.rowodo.or.tz">
-                                <img src="./res/images/logo/rowodo-logo.png" alt="rowodo-logo" class="top-logo">
+                                <img src="./res/images/logo/rowodo-logo.png" alt="rowodo-logo" class="main-logo">
                             </a>
                         </div>
                         <div class="col-md-6 section-title text-right">
-                            <a href="tel:+255767351547" class="phone-numer">+255 767 351 547</a> &nbsp; &nbsp; 
+                            <a href="tel:+255767351547" class="phone-numer">+255 767 351 547</a> &nbsp; &nbsp;
 
                             <a href="http://twitter.com/" class="section-title">
                                 <i class="bi bi-twitter social-link-icon"></i>
