--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </section>
 
             <div class="container pt-2">
-                <span class="web-for" id="small-univ-title">
+                <span class="page-subtitle" id="small-univ-title">
                     ROWODO
                 </span>
                 <h4 class="section-title">Rondo Women's Development Organization</h4>
