section title to social

--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
                         <div class="col-md-6 section-title text-right">
                             <a href="tel:+255767351547" class="phone-numer">+255 767 351 547</a> &nbsp; &nbsp;
 
-                            <a href="http://twitter.com/" class="section-title">
+                            <a href="http://twitter.com/" class="social">
                                 <i class="bi bi-twitter social-link-icon"></i>
                             </a> &nbsp;
-                            <a href="https://www.facebook.com/" class="section-title">
+                            <a href="https://www.facebook.com/" class="social">
                                 <i class="bi bi-facebook social-link-icon"></i>
                             </a> &nbsp;
-                            <a href="https://www.instagram.com/" class="section-title">
+                            <a href="https://www.instagram.com/" class="social">
                                 <i class="bi bi-instagram social-link-icon"></i>
                             </a> &nbsp;
-                            <a href="https://www.youtube.com/" class="section-title">
+                            <a href="https://www.youtube.com/" class="social">
                                 <i class="bi bi-youtube social-link-icon"></i>
                             </a>
                         </div>
