--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@
 
                     <div class="col-md-4 ">
                         <h5>Follow Us</h5>
-                        <a href="http://twitter.com/" class="section-title">
+                        <a href="http://twitter.com/" class="social">
                             <i class="bi bi-twitter social-link-icon"></i>
                         </a> &nbsp;
-                        <a href="https://www.facebook.com/" class="section-title">
+                        <a href="https://www.facebook.com/" class="social">
                             <i class="bi bi-facebook social-link-icon"></i>
                         </a> &nbsp;
-                        <a href="https://www.instagram.com/" class="section-title">
+                        <a href="https://www.instagram.com/" class="social">
                             <i class="bi bi-instagram social-link-icon"></i>
                         </a>
 
