--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
             <div class="container pt-2">
                 <span class="page-subtitle" id="small-title">
-                    ROWODO
+                    HOME
                 </span>
                 <h4 class="section-title">Rondo Women's Development Organization</h4>
                 <p class="section-subtitle"></p>
