--- a/index.html
+++ b/index.html
@@ -71,37 +71,46 @@
                             </a>
                         </div>
                     </div>
-                    <div class="container">
-                        <hr>
-                    </div>
+                    
                 </div>
             </section>
+
+            <div class="container">
+                <hr>
+            </div>
 
             <section>
                     </div>
 
-                <div class="container pb-3">
+                <!-- <div class="container pb-3">
 
-                </div>
+                </div> -->
             </section>
 
-            <div class="container pt-2">
-                <span class="page-subtitle" id="small-title">
-                    HOME
-                </span>
-                <h4 class="section-title">Rondo Women's Development Organization</h4>
-                <p class="section-subtitle"></p>
-
+            <div class="container">
+                <div class="page-top pb-3">
+                    <h4 class="section-title">Rondo Women's Development Organization</h4>
+                    <span class="page-subtitle" id="small-title">
+                        <i class="bi bi-house-fill"></i>
+                        HOME
+                    </span>
+                    <hr>
+                </div>
+               
 
                 <!-- page contents -->
+                <h5>Raise Your Helping Hand</h5>
                 <p>
-                    <span>Welcome to Rondo Women's Development Organization.</span>
+                    <span>We are a non-profit organization, we are looking forward to a peaceful world by helping each other to join hands together to bring a better future for all society.</span>
                     <br>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate consequuntur, quidem, vero officia nostrum omnis qui hic sint id velit a sequi, similique exercitationem dolores harum debitis praesentium deserunt ipsum. 
+                    <br>
+                    <button class="btn btn-outline-success" id="donate-btn">
+                        Donate
+                    </button>
                 </p>
 
                 <!-- News section -->
-                <h4> News </h4>
+                <h4 class="section-title"> News </h4>
                 <ul class="list-unstyled">
                     <li class="news">
                         <a href=""> Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem tenetur ratione repellat in omnis. Deleniti dicta rerum sint magnam ipsam iste officia temporibus! Sunt nam itaque temporibus natus impedit a! </a>
