--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
                         <i class="bi bi-house-fill"></i>
                         HOME
                     </span>
-                    <hr>
+                    <div class="page-top-underline mt-3 mb-3">
+                        .
+                    </div>
                 </div>
                
 
