how you can help templt

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
                 <!-- page contents -->
                 <section class="top-part pt-3 pb-3">
-                    <h5>Raise Your Helping Hand</h5>
+                    <h5 class="section-title">Raise Your Helping Hand</h5>
                     <p>
                         <span>We are a non-profit organization, we are looking forward to a peaceful world by helping each other to join hands together to bring a better future for all society.</span>
                         <br>
@@ -114,9 +114,35 @@
                 </section>
 
 
+                <section class="top-part pt-3 pb-3">
+                    <h5 class="section-title">How You Can Help</h5>
+                    <p>
+                        <div class="row">
+                            <div class="col-md-4">
+
+                            </div>
+
+                            <div class="col-md-4">
+
+                            </div>
+
+
+                            <div class="col-md-4">
+
+                            </div>
+                        </div>
+                        <span>We are a non-profit organization, we are looking forward to a peaceful world by helping each other to join hands together to bring a better future for all society.</span>
+                        <br>
+                        <br>
+                        <button class="btn btn-outline-success" id="donate-btn">
+                            Donate
+                        </button>
+                    </p>
+                </section>
+
                 <!-- News section -->
                 <section class="news pt-3 pb-3">
-                <h4 class="section-title"> News </h4>
+                <h5 class="section-title"> News </h5>
                 <ul class="list-unstyled">
                     <li class="news">
                         <a href=""> Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem tenetur ratione repellat in omnis. Deleniti dicta rerum sint magnam ipsam iste officia temporibus! Sunt nam itaque temporibus natus impedit a! </a>
@@ -137,9 +163,11 @@
             </section>
 
             <section class="partners pt-3 pb-3">
-                <h5>Our Partners</h5>
+                <h5 class="section-title">Our Partners</h5>
                 <p>
-                    <span>We are a non-profit organization, we are looking forward to a peaceful world by helping each other to join hands together to bring a better future for all society.</span>
+                    <span>
+                        <img src="" alt="">
+                        We are a non-profit organization, we are looking forward to a peaceful world by helping each other to join hands together to bring a better future for all society.</span>
                     <br>
                     <br>
                     <button class="btn btn-outline-success" id="donate-btn">
