how you can help

--- a/index.html
+++ b/index.html
@@ -119,24 +119,27 @@
                     <p>
                         <div class="row">
                             <div class="col-md-4">
-
+                                <h5>Send Donations</h5>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus ipsum dolores itaque at voluptatem deleniti, reiciendis ab similique ratione molestiae! Laudantium eveniet repellat alias accusantium impedit quam veniam dignissimos tempora.
+                                </p>
                             </div>
 
                             <div class="col-md-4">
-
+                                <h5>Become a Volunteer</h5>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus eaque fugiat impedit id nobis quae perferendis qui deleniti. Libero ab quibusdam quaerat iusto odit a ea mollitia vero architecto exercitationem!
+                                </p>
                             </div>
 
 
                             <div class="col-md-4">
-
+                                <h5>Give Scholarship</h5>
+                                <p>
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis enim ipsum esse ea in, accusamus eaque porro ratione fugiat omnis praesentium, accusantium eius deleniti! Odit officia labore ipsa rerum sed!
+                                </p>
                             </div>
                         </div>
-                        <span>We are a non-profit organization, we are looking forward to a peaceful world by helping each other to join hands together to bring a better future for all society.</span>
-                        <br>
-                        <br>
-                        <button class="btn btn-outline-success" id="donate-btn">
-                            Donate
-                        </button>
                     </p>
                 </section>
 
