--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                             <div class="col-md-4">
                                 <h5>Send Donations</h5>
                                 <p>
-                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus ipsum dolores itaque at voluptatem deleniti, reiciendis ab similique ratione molestiae! Laudantium eveniet repellat alias accusantium impedit quam veniam dignissimos tempora.
+                                    By using our bank accounts you can donate to help the Tanzania community. You can also make contact before donating.
                                 </p>
                             </div>
 
