--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                             <div class="col-md-4">
                                 <h5>Become a Volunteer</h5>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus eaque fugiat impedit id nobis quae perferendis qui deleniti. Libero ab quibusdam quaerat iusto odit a ea mollitia vero architecto exercitationem!
+                                    You can get involved today by becoming a Volunteer. Sign up and you will be joining a group of change-makers, a network strong enough to impact positive change.
                                 </p>
                             </div>
 
