--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             <div class="col-md-4">
                                 <h5>Give Scholarship</h5>
                                 <p>
-                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis enim ipsum esse ea in, accusamus eaque porro ratione fugiat omnis praesentium, accusantium eius deleniti! Odit officia labore ipsa rerum sed!
+                                    Your gift will help equip children in need with necessary resources, training and education while offering the promise of a brighter future. You can make a difference today by signing up.
                                 </p>
                             </div>
                         </div>
