--- a/index.html
+++ b/index.html
@@ -226,8 +226,7 @@
             <div id="copy-left">
                 <div class="container pb-2 pt-2">
                     <div class="row">
-                        <span class="col-9">Rondo Women's Development Organization</span>
-                        <span class="col-3 text-right"> <b>ROWODO</b> &copy; 2023 </span>
+                        <span class="col-12 ">Rondo Women's Development Organization (ROWODO) &nbsp; &copy; 2023</span>
                     </div>
                 </div>
             </div>
