--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 
 
             <div class="container">
+            <section class="top">
                 <div class="page-top pb-3">
                     <h4 class="section-title">Rondo Women's Development Organization</h4>
                     <span class="page-subtitle" id="small-title">
@@ -88,6 +89,8 @@
                         HOME
                     </span>
                 </div>
+            </section>
+
 
                 <!-- page contents -->
                 <section class="top-part pt-3 pb-3">
