--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 
             <div class="container">
-            <section class="top">
+            <section class="top-homepage">
                 <div class="page-top pb-3">
                     <h4 class="section-title">Rondo Women's Development Organization</h4>
                     <span class="page-subtitle" id="small-title">
