--- a/index.html
+++ b/index.html
@@ -95,14 +95,21 @@
                 <!-- page contents -->
                 <section class="top-part pt-3 pb-3">
                     <h5 class="section-title">Raise Your Helping Hand</h5>
+                    <div class="row">
                     <p>
-                        <span>We are a non-profit organization, we are looking forward to a peaceful world by helping each other to join hands together to bring a better future for all society.</span>
-                        <br>
-                        <br>
-                        <button class="btn btn-outline-success" id="donate-btn">
-                            Donate
-                        </button>
+                        <div class="col-6">
+                            <span>We are a non-profit organization, we are looking forward to a peaceful world by helping each other to join hands together to bring a better future for all society.</span>
+                            <br>
+                            <br>
+                            <button class="btn btn-outline-success" id="donate-btn">
+                                Donate
+                            </button>
+                        </div>
+                        <div class="col-6">
+                            <img src="./res/images/imgs/dsc_0121-1.jpg" alt="" id="women-image">
+                        </div>
                     </p>
+                    </div>
                 </section>
 
 
