--- a/index.html
+++ b/index.html
@@ -94,10 +94,11 @@
 
                 <!-- page contents -->
                 <section class="top-part pt-3 pb-3">
-                    <h5 class="section-title">Raise Your Helping Hand</h5>
+                    
                     <div class="row">
                     <p>
                         <div class="col-6">
+                            <h5 class="section-title">Raise Your Helping Hand</h5>
                             <span>We are a non-profit organization, we are looking forward to a peaceful world by helping each other to join hands together to bring a better future for all society.</span>
                             <br>
                             <br>
@@ -105,8 +106,9 @@
                                 Donate
                             </button>
                         </div>
-                        <div class="col-6">
-                            <img src="./res/images/imgs/dsc_0121-1.jpg" alt="" id="women-image">
+                        <div class="col-2"></div>
+                        <div class="col-4">
+                            <img src="./res/images/imgs/dsc_0121-1.jpg" alt="" id="women-image" class="rounded img-fluid float-end">
                         </div>
                     </p>
                     </div>
