sub-headings color

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     
                     <div class="row">
                     <p>
-                        <div class="col-6">
+                        <div class="col-md-6">
                             <h5 class="section-title">Raise Your Helping Hand</h5>
                             <span>We are a non-profit organization, we are looking forward to a peaceful world by helping each other to join hands together to bring a better future for all society.</span>
                             <br>
@@ -106,8 +106,8 @@
                                 Donate
                             </button>
                         </div>
-                        <div class="col-2"></div>
-                        <div class="col-4">
+                        <div class="col-md-2"></div>
+                        <div class="col-md-4 col-sm-12 order-sm-first order-xs-first order-md-last pb-sm-3 pb-xs-3">
                             <img src="./res/images/imgs/dsc_0121-1.jpg" alt="" id="women-image" class="rounded img-fluid float-end">
                         </div>
                     </p>
@@ -120,14 +120,14 @@
                     <p>
                         <div class="row">
                             <div class="col-md-4">
-                                <h5>Send Donations</h5>
+                                <h5 class="sub-sections-header">Send Donations</h5>
                                 <p>
                                     By using our bank accounts you can donate to help the Tanzania community. You can also make contact before donating.
                                 </p>
                             </div>
 
                             <div class="col-md-4">
-                                <h5>Become a Volunteer</h5>
+                                <h5 class="sub-sections-header">Become a Volunteer</h5>
                                 <p>
                                     You can get involved today by becoming a Volunteer. Sign up and you will be joining a group of change-makers, a network strong enough to impact positive change.
                                 </p>
@@ -135,7 +135,7 @@
 
 
                             <div class="col-md-4">
-                                <h5>Give Scholarship</h5>
+                                <h5 class="sub-sections-header">Give Scholarship</h5>
                                 <p>
                                     Your gift will help equip children in need with necessary resources, training and education while offering the promise of a brighter future. You can make a difference today by signing up.
                                 </p>
