footer location and community

--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
                 <!-- News section -->
                 <section class="news pt-3 pb-3">
                 <h5 class="section-title"> News </h5>
+                <h5 class="sub-sections-header">Recent Causes</h5>
                 <ul class="list-unstyled">
                     <li class="news">
                         <a href=""> Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem tenetur ratione repellat in omnis. Deleniti dicta rerum sint magnam ipsam iste officia temporibus! Sunt nam itaque temporibus natus impedit a! </a>
@@ -188,21 +189,24 @@
         <footer>
             <div class="container pt-5 pb-4">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-8">
                         <h5>Address</h5>
                         <p>
-                            Rondo Women's Development Organization<br>
-                            Ntauna Village - Lindi Rural District<br>
-
+                            Rondo Women's Development Organization <br>
+                            Ntauna Village <br>
+                            Lindi Rural District<br>
                         </p>
 
-                        For any observations and addition please contact us through our <b> <a href="https://github.com/">Github</a> </b> page.
+                        <p>
+                            <h5>Community</h5>
+                            <a href="#"> Become a Volunteer</a>
+                        </p>
                     </div>
 
-                    <div class="col-md-4">
+                    <div class="col-md-1">
                     </div>
 
-                    <div class="col-md-4 ">
+                    <div class="col-md-3 ">
                         <h5>Follow Us</h5>
                         <a href="http://twitter.com/" class="social">
                             <i class="bi bi-twitter social-link-icon"></i>
@@ -214,10 +218,7 @@
                             <i class="bi bi-instagram social-link-icon"></i>
                         </a>
 
-                        <br><br>
-                        <h5>Communities</h5>
-                        <a href="#"> Computer Association</a>
-
+                        
                     </div>
 
                 </div>
