address block footer

--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
                         <h5>Address</h5>
                         <p>
                             Rondo Women's Development Organization <br>
-                            Ntauna Village <br>
-                            Lindi Rural District<br>
+                            Ntauna Village -Lindi Rural <br>
+                            Lindi Region<br>
                         </p>
 
                         <p>
@@ -217,8 +217,6 @@
                         <a href="https://www.instagram.com/" class="social">
                             <i class="bi bi-instagram social-link-icon"></i>
                         </a>
-
-                        
                     </div>
 
                 </div>
