--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
                     <p>
                         <div class="row">
                             <div class="col-md-4">
+                                <i class="bi bi-baaloon-heart-fill"></i>
                                 <h5 class="sub-sections-header">Send Donations</h5>
                                 <p>
                                     By using our bank accounts you can donate to help the Tanzania community. You can also make contact before donating.
@@ -127,6 +128,7 @@
                             </div>
 
                             <div class="col-md-4">
+                                <i class="bi bi-baaloon-heart-fill"></i>
                                 <h5 class="sub-sections-header">Become a Volunteer</h5>
                                 <p>
                                     You can get involved today by becoming a Volunteer. Sign up and you will be joining a group of change-makers, a network strong enough to impact positive change.
@@ -135,6 +137,7 @@
 
 
                             <div class="col-md-4">
+                                <i class="bi bi-baaloon-heart-fill"></i>
                                 <h5 class="sub-sections-header">Give Scholarship</h5>
                                 <p>
                                     Your gift will help equip children in need with necessary resources, training and education while offering the promise of a brighter future. You can make a difference today by signing up.
