--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <h4 class="section-title">Rondo Women's Development Organization</h4>
                     <span class="page-subtitle" id="small-title">
                         <i class="bi bi-house-fill"></i>
-                        &nbsp;> Home
+                        &nbsp;> &nbsp;Home
                     </span>
                 </div>
             </section>
