--- a/index.html
+++ b/index.html
@@ -92,10 +92,9 @@
             </section>
 
 
-                <!-- page contents -->
-                <section class="top-part pt-3 pb-3">
-                    
-                    <div class="row">
+            <!-- page contents -->
+            <section class="top-part pt-3 pb-3">
+                <div class="row">
                     <p>
                         <div class="col-md-6">
                             <h5 class="section-title">Raise Your Helping Hand</h5>
@@ -111,8 +110,8 @@
                             <img src="./res/images/imgs/dsc_0121-1.jpg" alt="" id="women-image" class="rounded img-fluid float-end">
                         </div>
                     </p>
-                    </div>
-                </section>
+                </div>
+            </section>
 
 
                 <section class="top-part pt-3 pb-3">
@@ -228,7 +227,7 @@
             <div id="copy-left">
                 <div class="container pb-2 pt-2">
                     <div class="row">
-                        <span class="col-12 ">Rondo Women's Development Organization (ROWODO) &nbsp; &copy; 2023</span>
+                        <span class="col-12 ">R&copy; 2023 &nbsp; Rondo Women's Development Organization (ROWODO)</span>
                     </div>
                 </div>
             </div>
