--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             <div id="copy-left">
                 <div class="container pb-2 pt-2">
                     <div class="row">
-                        <span class="col-12 ">R&copy; 2023 &nbsp; Rondo Women's Development Organization (ROWODO)</span>
+                        <span class="col-12 ">&copy; 2023. &nbsp; Rondo Women's Development Organization (ROWODO)</span>
                     </div>
                 </div>
             </div>
