--- a/index.html
+++ b/index.html
@@ -171,15 +171,13 @@
 
             <section class="partners pt-3 pb-3">
                 <h5 class="section-title">Our Partners</h5>
+                <h5 class="sub-sections-header">We work hand in hand with</h5>
                 <p>
                     <span>
                         <img src="" alt="">
                         We are a non-profit organization, we are looking forward to a peaceful world by helping each other to join hands together to bring a better future for all society.</span>
                     <br>
                     <br>
-                    <button class="btn btn-outline-success" id="donate-btn">
-                        Donate
-                    </button>
                 </p>
             </section>
         </div>
