--- a/index.html
+++ b/index.html
@@ -172,7 +172,25 @@
             <section class="partners pt-3 pb-3">
                 <h5 class="section-title">Our Partners</h5>
                 <h5 class="sub-sections-header">We work hand in hand with</h5>
+                <div class="row">
+                    <div class="col-2">
+                        <img src="./res/images/imgs/partners/fsc.png" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="./res/images/imgs/partners/fsc.png" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="./res/images/imgs/partners/fsc.png" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="./res/images/imgs/partners/fsc.png" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="./res/images/imgs/partners/fsc.png" alt="">
+                    </div>
+                </div>
                 <p>
+                    
                     <span>
                         <img src="" alt="">
                         We are a non-profit organization, we are looking forward to a peaceful world by helping each other to join hands together to bring a better future for all society.</span>
@@ -182,9 +200,6 @@
             </section>
         </div>
         </main>
-
-
-
 
         <footer>
             <div class="container pt-5 pb-4">
