--- a/index.html
+++ b/index.html
@@ -174,19 +174,19 @@
                 <h5 class="sub-sections-header">We work hand in hand with</h5>
                 <div class="row">
                     <div class="col-2 p-2">
-                        <img src="./res/images/imgs/partners/fsc.png" alt="">
+                        <img src="./res/images/imgs/partners/fsc.png" alt="" class="partner-logo">
                     </div>
                     <div class="col-2 p-2">
-                        <img src="./res/images/imgs/partners/fsc.png" alt="">
+                        <img src="./res/images/imgs/partners/fsc.png" alt="" class="partner-logo">
                     </div>
                     <div class="col-2 p-2">
-                        <img src="./res/images/imgs/partners/fsc.png" alt="">
+                        <img src="./res/images/imgs/partners/fsc.png" alt="" class="partner-logo">
                     </div>
                     <div class="col-2 p-2">
-                        <img src="./res/images/imgs/partners/fsc.png" alt="">
+                        <img src="./res/images/imgs/partners/fsc.png" alt="" class="partner-logo">
                     </div>
                     <div class="col-2 p-2">
-                        <img src="./res/images/imgs/partners/fsc.png" alt="">
+                        <img src="./res/images/imgs/partners/fsc.png" alt="" class="partner-logo">
                     </div>
                 </div>
             </section>
