--- a/index.html
+++ b/index.html
@@ -172,23 +172,25 @@
             <section class="partners pt-3 pb-3">
                 <h5 class="section-title">Our Partners</h5>
                 <h5 class="sub-sections-header">We work hand in hand with</h5>
+                <div class="container">
                 <div class="row">
-                    <div class="col-2 p-2">
-                        <img src="./res/images/imgs/partners/fsc.png" alt="" class="partner-logo">
+                    <div class="col-md-2 pt-4 pb-4 pr-4">
+                        <img src="./res/images/imgs/partners/fsc.png" alt="" class="img-fluid partner-logo">
                     </div>
-                    <div class="col-2 p-2">
-                        <img src="./res/images/imgs/partners/fsc.png" alt="" class="partner-logo">
+                    <div class="col-md-2 p-4">
+                        <img src="./res/images/imgs/partners/swissaid.png" alt="" class="img-fluid partner-logo">
                     </div>
-                    <div class="col-2 p-2">
-                        <img src="./res/images/imgs/partners/fsc.png" alt="" class="partner-logo">
+                    <div class="col-md-2 p-4">
+                        <img src="./res/images/imgs/partners/fsc.png" alt="" class="img-fluid partner-logo">
                     </div>
-                    <div class="col-2 p-2">
-                        <img src="./res/images/imgs/partners/fsc.png" alt="" class="partner-logo">
+                    <div class="col-md-2 p-2">
+                        <img src="./res/images/imgs/partners/fsc.png" alt="" class="img-fluid partner-logo">
                     </div>
-                    <div class="col-2 p-2">
-                        <img src="./res/images/imgs/partners/fsc.png" alt="" class="partner-logo">
+                    <div class="col-md-2 p-2">
+                        <img src="./res/images/imgs/partners/fsc.png" alt="" class="img-fluid partner-logo">
                     </div>
                 </div>
+            </div>
             </section>
         </div>
         </main>
@@ -232,7 +234,7 @@
             <div id="copy-left">
                 <div class="container pb-2 pt-2">
                     <div class="row">
-                        <span class="col-12 ">&copy; 2023. &nbsp; Rondo Women's Development Organization (ROWODO)</span>
+                        <span class="col-12 ">&copy; 2023 &nbsp;| &nbsp;Rondo Women's Development Organization (ROWODO)</span>
                     </div>
                 </div>
             </div>
