--- a/index.html
+++ b/index.html
@@ -174,20 +174,20 @@
                 <h5 class="sub-sections-header">We work hand in hand with</h5>
                 <div class="container">
                 <div class="row">
-                    <div class="col-md-2 pt-4 pb-4 pr-4">
-                        <img src="./res/images/imgs/partners/fsc.png" alt="" class="img-fluid partner-logo">
+                    <div class="col-md-2 p-3">
+                        <img src="./res/images/imgs/partners/fsc.png" alt="" class="img-fluid partner-logo" id="fsc-logo">
                     </div>
-                    <div class="col-md-2 p-4">
-                        <img src="./res/images/imgs/partners/swissaid.png" alt="" class="img-fluid partner-logo">
+                    <div class="col-md-2 p-3">
+                        <img src="./res/images/imgs/partners/swissaid.png" alt="" class="img-fluid partner-logo" id="swissaid-logo">
                     </div>
-                    <div class="col-md-2 p-4">
-                        <img src="./res/images/imgs/partners/fsc.png" alt="" class="img-fluid partner-logo">
+                    <div class="col-md-2 p-3">
+                        <img src="./res/images/imgs/partners/agha-khan.png" alt="" class="img-fluid partner-logo" id="agakhan-logo">
                     </div>
-                    <div class="col-md-2 p-2">
-                        <img src="./res/images/imgs/partners/fsc.png" alt="" class="img-fluid partner-logo">
+                    <div class="col-md-2 p-3">
+                        <img src="./res/images/imgs/partners/thrdc.jpeg" alt="" class="img-fluid partner-logo" id="thrdc-logo">
                     </div>
-                    <div class="col-md-2 p-2">
-                        <img src="./res/images/imgs/partners/fsc.png" alt="" class="img-fluid partner-logo">
+                    <div class="col-md-2 p-3">
+                        <img src="./res/images/imgs/partners/can.jpeg" alt="" class="img-fluid partner-logo" id="can-logo">
                     </div>
                 </div>
             </div>
