--- a/index.html
+++ b/index.html
@@ -173,21 +173,21 @@
                 <h5 class="section-title">Our Partners</h5>
                 <h5 class="sub-sections-header">We work hand in hand with</h5>
                 <div class="container">
-                <div class="row">
-                    <div class="col-md-2 p-3">
-                        <img src="./res/images/imgs/partners/fsc.png" alt="" class="img-fluid partner-logo" id="fsc-logo">
+                <div class="row pt-3 pb-3">
+                    <div class="col-md-3 text-center">
+                        <img src="./res/images/imgs/partners/fsc.png" alt="" class="img-fluid text-center partner-logo" id="fsc-logo">
                     </div>
-                    <div class="col-md-2 p-3">
+                    <div class="col-md-1 text-center">
+                        <img src="./res/images/imgs/partners/can.png" alt="" class="img-fluid text-center partner-logo" id="can-logo">
+                    </div>
+                    <div class="col-md-3 p-3 text-center">
+                        <img src="./res/images/imgs/partners/agha-khan.png" alt="" class="img-fluid  partner-logo" id="agakhan-logo">
+                    </div>
+                    <div class="col-md-2 p-3 text-center">
+                        <img src="./res/images/imgs/partners/thrdc.jpeg" alt="" class="img-fluid align-content-center partner-logo" id="thrdc-logo">
+                    </div>
+                    <div class="col-md-3 text-center">
                         <img src="./res/images/imgs/partners/swissaid.png" alt="" class="img-fluid partner-logo" id="swissaid-logo">
-                    </div>
-                    <div class="col-md-2 p-3">
-                        <img src="./res/images/imgs/partners/agha-khan.png" alt="" class="img-fluid partner-logo" id="agakhan-logo">
-                    </div>
-                    <div class="col-md-2 p-3">
-                        <img src="./res/images/imgs/partners/thrdc.jpeg" alt="" class="img-fluid partner-logo" id="thrdc-logo">
-                    </div>
-                    <div class="col-md-2 p-3">
-                        <img src="./res/images/imgs/partners/can.jpeg" alt="" class="img-fluid partner-logo" id="can-logo">
                     </div>
                 </div>
             </div>
