center section-titles

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
                 <!-- News section -->
                 <section class="news pt-3 pb-3">
-                <h5 class="section-title"> News </h5>
+                <h5 class="section-title text-center"> News </h5>
                 <h5 class="sub-sections-header">Recent Causes</h5>
                 <ul class="list-unstyled">
                     <li class="news">
@@ -170,20 +170,20 @@
             </section>
 
             <section class="partners pt-3 pb-3">
-                <h5 class="section-title">Our Partners</h5>
+                <h5 class="section-title text-center">Our Partners</h5>
                 <h5 class="sub-sections-header">We work hand in hand with</h5>
                 <div class="container">
                 <div class="row pt-3 pb-3">
                     <div class="col-md-3 text-center">
                         <img src="./res/images/imgs/partners/fsc.png" alt="" class="img-fluid text-center partner-logo" id="fsc-logo">
                     </div>
-                    <div class="col-md-1 text-center">
+                    <div class="col-md-2 col-sm-4 col-xs-4 text-center">
                         <img src="./res/images/imgs/partners/can.png" alt="" class="img-fluid text-center partner-logo" id="can-logo">
                     </div>
-                    <div class="col-md-3 p-3 text-center">
+                    <div class="col-md-2 col-sm-4  col-xs-4 p-3 text-center">
                         <img src="./res/images/imgs/partners/agha-khan.png" alt="" class="img-fluid  partner-logo" id="agakhan-logo">
                     </div>
-                    <div class="col-md-2 p-3 text-center">
+                    <div class="col-md-2 col-sm-4 col-xs-4 p-3 text-center">
                         <img src="./res/images/imgs/partners/thrdc.jpeg" alt="" class="img-fluid align-content-center partner-logo" id="thrdc-logo">
                     </div>
                     <div class="col-md-3 text-center">
