partners logos sizes

--- a/index.html
+++ b/index.html
@@ -113,9 +113,11 @@
                 </div>
             </section>
 
+            <hr>
+
 
                 <section class="top-part pt-3 pb-3">
-                    <h5 class="section-title">How You Can Help</h5>
+                    <h5 class="section-title text-center">How You Can Help</h5>
                     <p>
                         <div class="row">
                             <div class="col-md-4">
@@ -146,6 +148,8 @@
                     </p>
                 </section>
 
+                <hr>
+
                 <!-- News section -->
                 <section class="news pt-3 pb-3">
                 <h5 class="section-title text-center"> News </h5>
@@ -169,6 +173,8 @@
                 </ul>
             </section>
 
+            <hr>
+            
             <section class="partners pt-3 pb-3">
                 <h5 class="section-title text-center">Our Partners</h5>
                 <h5 class="sub-sections-header">We work hand in hand with</h5>
