--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             </section>
 
             <hr>
-            
+
             <section class="partners pt-3 pb-3">
                 <h5 class="section-title text-center">Our Partners</h5>
                 <h5 class="sub-sections-header">We work hand in hand with</h5>
@@ -186,10 +186,10 @@
                     <div class="col-md-2 col-sm-4 col-xs-4 text-center">
                         <img src="./res/images/imgs/partners/can.png" alt="" class="img-fluid text-center partner-logo" id="can-logo">
                     </div>
-                    <div class="col-md-2 col-sm-4  col-xs-4 p-3 text-center">
+                    <div class="col-md-2 col-sm-4  col-xs-4 text-center">
                         <img src="./res/images/imgs/partners/agha-khan.png" alt="" class="img-fluid  partner-logo" id="agakhan-logo">
                     </div>
-                    <div class="col-md-2 col-sm-4 col-xs-4 p-3 text-center">
+                    <div class="col-md-2 col-sm-4 col-xs-4 text-center">
                         <img src="./res/images/imgs/partners/thrdc.jpeg" alt="" class="img-fluid align-content-center partner-logo" id="thrdc-logo">
                     </div>
                     <div class="col-md-3 text-center">
