--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <hr>
 
 
-                <section class="top-part pt-3 pb-3">
+                <section class="top-part pt-4 pb-3">
                     <h5 class="section-title text-center">How You Can Help</h5>
                     <p>
                         <div class="row">
@@ -148,13 +148,54 @@
                     </p>
                 </section>
 
-                <hr>
 
                 <!-- News section -->
-                <section class="news pt-3 pb-3">
+                <section class="news pt-4 pb-3">
                 <h5 class="section-title text-center"> News </h5>
-                <h5 class="sub-sections-header">Recent Causes</h5>
-                <ul class="list-unstyled">
+                <h5 class="sub-sections-header pb-2">Recent Causes</h5>
+
+                <div class="">
+                    <div class="row">
+                        <div class="col-md-4 col-sm-12 col-xs-12">
+                            <div class="card">
+                                <div class="news p-3">
+                                    <a href=""> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil magnam minima excepturi beatae, saepe sunt cupiditate eaque non ratione, deleniti, iusto adipisci quaerat dicta eius delectus. Voluptate, repudiandae dolore? </a>
+                                    <br>
+                                    <span class="news-info mt-4">
+                                        <a href="" class="user-tag">Admin</a> | <a href="" class="time-tag">Time Posted</a> | <a href="" class="cat-tag">Category</a>   
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4 col-sm-12 col-xs-12">
+                            <div class="card">
+                                <span class="news p-3">
+                                    <a href=""> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil magnam minima excepturi beatae, saepe sunt cupiditate eaque non ratione, deleniti, iusto adipisci quaerat dicta eius delectus. Voluptate, repudiandae dolore? </a>
+                                    <br>
+                                    <span class="news-info">
+                                        <a href="" class="user-tag">Admin</a> | <a href="" class="time-tag">Time Posted</a> | <a href="" class="cat-tag">Category</a>   
+                                    </span>
+                                </span>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4 col- col-sm-12 col-xs-12">
+                            <div class="card">
+                                <span class="news p-3">
+                                    <a href=""> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil magnam minima excepturi beatae, saepe sunt cupiditate eaque non ratione, deleniti, iusto adipisci quaerat dicta eius delectus. Voluptate, repudiandae dolore? </a>
+                                    <br>
+                                    <span class="news-info">
+                                        <a href="" class="user-tag">Admin</a> | <a href="" class="time-tag">Time Posted</a> | <a href="" class="cat-tag">Category</a>   
+                                    </span>
+                                </span>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+                <!-- <ul class="list-unstyled">
                     <li class="news">
                         <a href=""> Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem tenetur ratione repellat in omnis. Deleniti dicta rerum sint magnam ipsam iste officia temporibus! Sunt nam itaque temporibus natus impedit a! </a>
                         <br>
@@ -162,18 +203,9 @@
                             <a href="" class="user-tag">Admin</a> | <a href="" class="time-tag">Time Posted</a> | <a href="" class="cat-tag">Category</a>   
                         </span>
                     </li>
-
-                    <li class="news pt-2 pb-2">
-                        <a href=""> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nihil magnam minima excepturi beatae, saepe sunt cupiditate eaque non ratione, deleniti, iusto adipisci quaerat dicta eius delectus. Voluptate, repudiandae dolore? </a>
-                        <br>
-                        <span class="news-info">
-                            <a href="" class="user-tag">Admin</a> | <a href="" class="time-tag">Time Posted</a> | <a href="" class="cat-tag">Category</a>   
-                        </span>
-                    </li>
-                </ul>
+                </ul> -->
             </section>
 
-            <hr>
 
             <section class="partners pt-3 pb-3">
                 <h5 class="section-title text-center">Our Partners</h5>
