--- a/index.html
+++ b/index.html
@@ -54,7 +54,18 @@
                                 <img src="./res/images/logo/rowodo-logo.png" alt="rowodo-logo" class="main-logo">
                             </a>
                         </div>
+                        
                         <div class="col-md-6 section-title text-right">
+
+                            <a href="">
+                                About
+                            </a>
+                            <a href="">
+                                Projects
+                            </a>
+                            <a href="">
+                                Contact
+                            </a>
                             <a href="tel:+255767351547" class="phone-number">+255 767 351 547</a> &nbsp; &nbsp;
 
                             <a href="http://twitter.com/" class="social">
