--- a/index.html
+++ b/index.html
@@ -64,8 +64,15 @@
                                 Projects
                             </a>
                             <a href="">
+                                Blog
+                            </a>
+                            <a href="">
+                                News
+                            </a>
+                            <a href="">
                                 Contact
                             </a>
+                            <a 
                             <a href="tel:+255767351547" class="phone-number">+255 767 351 547</a> &nbsp; &nbsp;
 
                             <a href="http://twitter.com/" class="social">
